src/parser/snapshots/hebi4__parser__tests__expr_if.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "simple",
            ),
            IfSimple(
                Bool(
                    true,
                ),
                None,
                [
                    StmtExpr(
                        Int(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "ternary",
            ),
            IfSimple(
                Bool(
                    true,
                ),
                Some(
                    Block(
                        [
                            StmtExpr(
                                Int(
                                    0,
                                ),
                            ),
                        ],
                    ),
                ),
                [
                    StmtExpr(
                        Int(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_one",
            ),
            IfMulti(
                None,
                [
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int(
                                    0,
                                ),
                            ),
                        ],
                    ),
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int(
                                    1,
                                ),
                            ),
                        ],
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "mutli_one_else",
            ),
            IfMulti(
                Some(
                    Block(
                        [
                            StmtExpr(
                                Int(
                                    2,
                                ),
                            ),
                        ],
                    ),
                ),
                [
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int(
                                    0,
                                ),
                            ),
                        ],
                    ),
                    Branch(
                        Bool(
                            true,
                        ),
                        [
                            StmtExpr(
                                Int(
                                    1,
                                ),
                            ),
                        ],
                    ),
                ],
            ),
        ),
    ],
)
