src/parser/snapshots/hebi4__parser__tests__expr_return2.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Return(
                Some(
                    Int(
                        100,
                    ),
                ),
            ),
        ),
    ],
)
