src/parser/snapshots/hebi4__parser__tests__expr_return3.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Block(
                [
                    StmtExpr(
                        Return(
                            None,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            Int32(
                100,
            ),
        ),
    ],
)
