src/parser/snapshots/hebi4__parser__tests__fact.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        FuncDecl(
            Ident(
                "factorial",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Le,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int(
                                    1,
                                ),
                            ),
                            Some(
                                Block(
                                    [
                                        StmtExpr(
                                            Return(
                                                Some(
                                                    Infix(
                                                        Mul,
                                                        GetVar(
                                                            Ident(
                                                                "n",
                                                            ),
                                                        ),
                                                        Call(
                                                            GetVar(
                                                                Ident(
                                                                    "factorial",
                                                                ),
                                                            ),
                                                            [
                                                                Infix(
                                                                    Sub,
                                                                    GetVar(
                                                                        Ident(
                                                                            "n",
                                                                        ),
                                                                    ),
                                                                    Int(
                                                                        1,
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                            [
                                StmtExpr(
                                    Return(
                                        Some(
                                            Int(
                                                1,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
    ],
)
