src/parser/snapshots/hebi4__parser__tests__fib.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        FuncDecl(
            Ident(
                "fib_rec",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Lt,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int(
                                    2,
                                ),
                            ),
                            Some(
                                Block(
                                    [
                                        StmtExpr(
                                            Infix(
                                                Add,
                                                Call(
                                                    GetVar(
                                                        Ident(
                                                            "fib",
                                                        ),
                                                    ),
                                                    [
                                                        Infix(
                                                            Sub,
                                                            GetVar(
                                                                Ident(
                                                                    "n",
                                                                ),
                                                            ),
                                                            Int(
                                                                1,
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                                Call(
                                                    GetVar(
                                                        Ident(
                                                            "fib",
                                                        ),
                                                    ),
                                                    [
                                                        Infix(
                                                            Sub,
                                                            GetVar(
                                                                Ident(
                                                                    "n",
                                                                ),
                                                            ),
                                                            Int(
                                                                2,
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                            [
                                StmtExpr(
                                    GetVar(
                                        Ident(
                                            "n",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
        FuncDecl(
            Ident(
                "fib_iter",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Lt,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int(
                                    2,
                                ),
                            ),
                            None,
                            [
                                StmtExpr(
                                    Return(
                                        Some(
                                            GetVar(
                                                Ident(
                                                    "n",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                    Var(
                        Ident(
                            "prev",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    Var(
                        Ident(
                            "curr",
                        ),
                        Int(
                            1,
                        ),
                    ),
                    Var(
                        Ident(
                            "i",
                        ),
                        Int(
                            2,
                        ),
                    ),
                    Loop(
                        [
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Gt,
                                        GetVar(
                                            Ident(
                                                "i",
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "n",
                                            ),
                                        ),
                                    ),
                                    None,
                                    [
                                        StmtExpr(
                                            Break,
                                        ),
                                    ],
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    Add,
                                    GetVar(
                                        Ident(
                                            "i",
                                        ),
                                    ),
                                    Int(
                                        1,
                                    ),
                                ),
                            ),
                            Var(
                                Ident(
                                    "next",
                                ),
                                Infix(
                                    Add,
                                    GetVar(
                                        Ident(
                                            "prev",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "curr",
                                        ),
                                    ),
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    None,
                                    GetVar(
                                        Ident(
                                            "prev",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "curr",
                                        ),
                                    ),
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    None,
                                    GetVar(
                                        Ident(
                                            "curr",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "next",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                    StmtExpr(
                        Return(
                            Some(
                                GetVar(
                                    Ident(
                                        "curr",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
    ],
)
