src/parser/snapshots/hebi4__parser__tests__function.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Func(
                Ident(
                    "test",
                ),
                Block(
                    [],
                ),
                [],
            ),
        ),
        StmtExpr(
            Func(
                Ident(
                    "test",
                ),
                Block(
                    [],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
    ],
)
