src/parser/snapshots/hebi4__parser__tests__function_body.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Func(
                Ident(
                    "test",
                ),
                Block(
                    [
                        StmtExpr(
                            Infix(
                                Add,
                                Int(
                                    1,
                                ),
                                Int(
                                    1,
                                ),
                            ),
                        ),
                    ],
                ),
                [],
            ),
        ),
        StmtExpr(
            Func(
                Ident(
                    "test",
                ),
                Block(
                    [
                        StmtExpr(
                            Infix(
                                Add,
                                Int(
                                    1,
                                ),
                                Int(
                                    1,
                                ),
                            ),
                        ),
                    ],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
        StmtExpr(
            Func(
                Ident(
                    "test",
                ),
                Block(
                    [
                        StmtExpr(
                            Infix(
                                Add,
                                Int(
                                    1,
                                ),
                                Int(
                                    1,
                                ),
                            ),
                        ),
                    ],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
    ],
)
