src/parser/snapshots/hebi4__parser__tests__function_expr.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            FuncAnon(
                None,
                Block(
                    [],
                ),
                [],
            ),
        ),
        Var(
            Ident(
                "args",
            ),
            FuncAnon(
                None,
                Block(
                    [],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "args_tc",
            ),
            FuncAnon(
                None,
                Block(
                    [],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
    ],
)
