src/parser/snapshots/hebi4__parser__tests__function_missing_name.snap
---
source: src/parser/tests.rs
expression: snapshot
---
ERROR
expected function name
3 |  fn () do end
  |     ^
