src/parser/snapshots/hebi4__parser__tests__if_without_else.snap
---
source: src/parser/tests.rs
expression: snapshot
---
ERROR
expected `else`
1 |  var x = if true do 0 end
  |                       ^^^
